Add padding to pages

--- a/content/templates/dados_fgv.html
+++ b/content/templates/dados_fgv.html
@@ -2,49 +2,53 @@
 {% block content %}
 {% load static %}
 
-<h2>Bases de dados para o FGV-Municípios</h2>
-
-<br>
-<br>
-<br>
-
-
-<a href="https://www.proadess.icict.fiocruz.br/index.php?pag=matraba" target="_blank"> PROADESS</a> - Metodologia de Avaliação do Desempenho do Sistema de Saúde
-<p></p>
-
-<a href="http://idsus.saude.gov.br/assets/detalhadas.pdf" target="_blank"> IDSUS</a> - Indicadores simples e compostos (índices) do IDSUS
-<p></p>
-
-<a href="https://bvsms.saude.gov.br/bvs/publicacoes/manual_avaliacao_pcatool_brasil.pdf" target="_blank"> PCATool-Brasil</a> - Manual do Instrumento de Avaliação da Atenção Primária à Saúde - Primary Care Assessment Tool PCATool-Brasil
-<p></p>
-
-<a href="https://www.scielo.br/j/sdeb/a/n9JDgQMH5DTxsLTwpm9Gtwt/?lang=pt&format=pdf" target="_blank"> Indicadores de desempenho no Sistema Único de Saúde</a>: uma avaliação dos avanços e lacunas
-<p></p>
-
-<a href="https://www.bnb.gov.br/documents/80223/1095809/6.pdf/b5bcde18-f15e-4519-8841-a6a6b3d39a94" target="_blank"> EFICIÊNCIA TÉCNICA E DE ESCALA DO SISTEMA ÚNICO DE SAÚDE NOS MUNICÍPIOS DO NORDESTE BRASILEIRO</a>
-<p>Wescley de Freitas Barbosa e Eliane Pinheiro de Sousa</p>
-
-<a href="https://www.tce.sp.gov.br/sites/default/files/portal/CartilhaTCESPObservatorio_2018.pdf" target="_blank"> O Observatório do Futuro </a> - Núcleo de Monitoramento dos ODS
-<p></p>
-
-<a href="https://www.arca.fiocruz.br/bitstream/icict/6467/2/Avalia%C3%A7%C3%A3o%20de%20Desempenho%20de%20Sistemas%20de%20Sa%C3%BAde.pdf" target="_blank"> Avaliação de Desempenho de Sistemas de Saúde </a>: um modelo de análise
-<p>Francisco Viacava; Maria Alicia Domínguez Ugá; Silvia Porto; Josué Laguardia e Rodrigo da Silva Moreira</p>
-
-<a href="https://www.proadess.icict.fiocruz.br/SGDP-RELATORIO_FINAL%20_com_sumario_atualizadorev%202014.pdf" target="_blank"> PROADESS - Avaliação de Desempenho do Sistema de Saúde Brasileiro: indicadores para monitoramento (Relatório final) </a>
-<p></p>
-
-<a href="http://www.ensp.fiocruz.br/portal-ensp/informe/site/arquivos/anexos/fb72ebea92beafa5716cd1f5fc194ff042552e88.PDF" target="_blank"> Modelos de Avaliação de Desempenho de Sistemas de Saúde: diferenças e similaridades </a>
-<p>Ana Cristina Reis; Elizabeth Moreira dos Santos; Marcela Rocha de Arruda</p>
-
-<a href="http://consad.org.br/wp-content/uploads/2016/06/Painel-12-02.pdf" target="_blank"> SAÚDE PÚBLICA NO BRASIL: PROPOSTA DE UM MODELO DE AVALIAÇÃO DE EFETIVIDADE DO SISTEMA UTILIZANDO O IDSUS</a>
-<p>Lilian Ribeiro de Oliveira; Cláudia Souza Passador; João Luiz Passador; José Eduardo Ferreira Lopes</p>
-<p></p>
-
-<a href="https://voxdev.org/topic/health-education/attracting-physicians-underserved-areas-evidence-brazil?utm_source=dlvr.it&utm_medium=twitter" target="_blank"> Attracting physicians to underserved areas: Evidence from Brazil</a>
-<p>Costa, Nunes, and Sanches 2019</p>
-<p></p>
-<br>
-<br>
-<br>
+<div class="container">
+    
+    <h2>Bases de dados para o FGV-Municípios</h2>
+    
+    <br>
+    <br>
+    <br>
+    
+    
+    <a href="https://www.proadess.icict.fiocruz.br/index.php?pag=matraba" target="_blank"> PROADESS</a> - Metodologia de Avaliação do Desempenho do Sistema de Saúde
+    <p></p>
+    
+    <a href="http://idsus.saude.gov.br/assets/detalhadas.pdf" target="_blank"> IDSUS</a> - Indicadores simples e compostos (índices) do IDSUS
+    <p></p>
+    
+    <a href="https://bvsms.saude.gov.br/bvs/publicacoes/manual_avaliacao_pcatool_brasil.pdf" target="_blank"> PCATool-Brasil</a> - Manual do Instrumento de Avaliação da Atenção Primária à Saúde - Primary Care Assessment Tool PCATool-Brasil
+    <p></p>
+    
+    <a href="https://www.scielo.br/j/sdeb/a/n9JDgQMH5DTxsLTwpm9Gtwt/?lang=pt&format=pdf" target="_blank"> Indicadores de desempenho no Sistema Único de Saúde</a>: uma avaliação dos avanços e lacunas
+    <p></p>
+    
+    <a href="https://www.bnb.gov.br/documents/80223/1095809/6.pdf/b5bcde18-f15e-4519-8841-a6a6b3d39a94" target="_blank"> EFICIÊNCIA TÉCNICA E DE ESCALA DO SISTEMA ÚNICO DE SAÚDE NOS MUNICÍPIOS DO NORDESTE BRASILEIRO</a>
+    <p>Wescley de Freitas Barbosa e Eliane Pinheiro de Sousa</p>
+    
+    <a href="https://www.tce.sp.gov.br/sites/default/files/portal/CartilhaTCESPObservatorio_2018.pdf" target="_blank"> O Observatório do Futuro </a> - Núcleo de Monitoramento dos ODS
+    <p></p>
+    
+    <a href="https://www.arca.fiocruz.br/bitstream/icict/6467/2/Avalia%C3%A7%C3%A3o%20de%20Desempenho%20de%20Sistemas%20de%20Sa%C3%BAde.pdf" target="_blank"> Avaliação de Desempenho de Sistemas de Saúde </a>: um modelo de análise
+    <p>Francisco Viacava; Maria Alicia Domínguez Ugá; Silvia Porto; Josué Laguardia e Rodrigo da Silva Moreira</p>
+    
+    <a href="https://www.proadess.icict.fiocruz.br/SGDP-RELATORIO_FINAL%20_com_sumario_atualizadorev%202014.pdf" target="_blank"> PROADESS - Avaliação de Desempenho do Sistema de Saúde Brasileiro: indicadores para monitoramento (Relatório final) </a>
+    <p></p>
+    
+    <a href="http://www.ensp.fiocruz.br/portal-ensp/informe/site/arquivos/anexos/fb72ebea92beafa5716cd1f5fc194ff042552e88.PDF" target="_blank"> Modelos de Avaliação de Desempenho de Sistemas de Saúde: diferenças e similaridades </a>
+    <p>Ana Cristina Reis; Elizabeth Moreira dos Santos; Marcela Rocha de Arruda</p>
+    
+    <a href="http://consad.org.br/wp-content/uploads/2016/06/Painel-12-02.pdf" target="_blank"> SAÚDE PÚBLICA NO BRASIL: PROPOSTA DE UM MODELO DE AVALIAÇÃO DE EFETIVIDADE DO SISTEMA UTILIZANDO O IDSUS</a>
+    <p>Lilian Ribeiro de Oliveira; Cláudia Souza Passador; João Luiz Passador; José Eduardo Ferreira Lopes</p>
+    <p></p>
+    
+    <a href="https://voxdev.org/topic/health-education/attracting-physicians-underserved-areas-evidence-brazil?utm_source=dlvr.it&utm_medium=twitter" target="_blank"> Attracting physicians to underserved areas: Evidence from Brazil</a>
+    <p>Costa, Nunes, and Sanches 2019</p>
+    <p></p>
+    <br>
+    <br>
+    <br>
+    
+</div>
 
 {% endblock %}
