--- a/content/templates/fgv.html
+++ b/content/templates/fgv.html
@@ -2,25 +2,28 @@
 {% block content %}
 {% load static %}
 
-<h2>Artigos interessantes para o FGV-Municípios</h2>
-
-<br>
-<br>
-<br>
-
-<a href="https://voxdev.org/topic/health-education/attracting-physicians-underserved-areas-evidence-brazil?utm_source=dlvr.it&utm_medium=twitter" target="_blank"> Attracting physicians to underserved areas: Evidence from Brazil</a>; Costa, Nunes, and Sanches 2019
-<p></p>
-
-<a href="https://voxdev.org/" target="_blank"> VOXDEV - Development economics from research to practice.</a> VoxDev is a platform for economists, policymakers, practitioners, donors, 
-the private sector and others interested in development to discuss key policy issues. Expert contributors provide insightful commentary, analysis, and evidence on a wide range of 
-policy challenges in formats that we hope are accessible to a wide audience interested in development. We aim to put evidence from decades of academic research into the hands of 
-decision-makers and civil society in developing countries in a way that they can be easily accessed and actually put to use, ultimately encouraging the design and implementation 
-of more evidence-based policy. 
-<p></p>
-VoxDev, launched in June 2017, is a collaboration between the Centre for Economic Policy Research, the International Growth Centre, and the Private Enterprise Development in 
-Low Income Countries programme. The Editor-in-Chief is Tavneet Suri, supported by the Editorial Board, Robin Burgess, and Chris Woodruff, and a great group of Founding Contributors.
-<br>
-<br>
-<br>
+<div class="container">
+    <h2>Artigos interessantes para o FGV-Municípios</h2>
+    
+    <br>
+    <br>
+    <br>
+    
+    <a href="https://voxdev.org/topic/health-education/attracting-physicians-underserved-areas-evidence-brazil?utm_source=dlvr.it&utm_medium=twitter" target="_blank"> Attracting physicians to underserved areas: Evidence from Brazil</a>; Costa, Nunes, and Sanches 2019
+    <p></p>
+    
+    <a href="https://voxdev.org/" target="_blank"> VOXDEV - Development economics from research to practice.</a> VoxDev is a platform for economists, policymakers, practitioners, donors, 
+    the private sector and others interested in development to discuss key policy issues. Expert contributors provide insightful commentary, analysis, and evidence on a wide range of 
+    policy challenges in formats that we hope are accessible to a wide audience interested in development. We aim to put evidence from decades of academic research into the hands of 
+    decision-makers and civil society in developing countries in a way that they can be easily accessed and actually put to use, ultimately encouraging the design and implementation 
+    of more evidence-based policy. 
+    <p></p>
+    VoxDev, launched in June 2017, is a collaboration between the Centre for Economic Policy Research, the International Growth Centre, and the Private Enterprise Development in 
+    Low Income Countries programme. The Editor-in-Chief is Tavneet Suri, supported by the Editorial Board, Robin Burgess, and Chris Woodruff, and a great group of Founding Contributors.
+    <br>
+    <br>
+    <br>
+    
+</div>
 
 {% endblock %}
