--- a/content/templates/four_question.html
+++ b/content/templates/four_question.html
@@ -3,25 +3,29 @@
 {% load static %}
 
 
+<div class="container">
+    <h2>Four Questions</h2>
+    <br>
+    <br>
+    <h4>
+        These are the four issues we need to address by the end of July:<p></p>
+    </h4>
+    
+    
+        <ol>
+            <li>What is the rationale/added value for integrating rehabilitation into PHC?</li>
+            <li>What is the rehabilitation needs and subsequent scope of rehabilitation interventions required to be available in PHC, and which needs should be met elsewhere and subsequently interventions not be available in PHC?</li>
+            <li>What are the evidence-based models of care and configuration of services that meet rehabilitation needs in PHC, and how do they vary across country income status? What are the key challenges regarding these models?</li>
+            <li>Taking all this into account, what is the practical guidance (and foundation to WHO Rehabilitation Programme’s strategic approach) for integrating rehabilitation into PHC, taking account of a country’s income status and major features of the health system?</li>
+        </ol>
+    
+    <p></p>
+    
+    <br>
+    <br>
 
-<h2>Four Questions</h2>
-<br>
-<br>
-<h4>
-    These are the four issues we need to address by the end of July:<p></p>
-</h4>
+</div>
 
 
-    <ol>
-        <li>What is the rationale/added value for integrating rehabilitation into PHC?</li>
-        <li>What is the rehabilitation needs and subsequent scope of rehabilitation interventions required to be available in PHC, and which needs should be met elsewhere and subsequently interventions not be available in PHC?</li>
-        <li>What are the evidence-based models of care and configuration of services that meet rehabilitation needs in PHC, and how do they vary across country income status? What are the key challenges regarding these models?</li>
-        <li>Taking all this into account, what is the practical guidance (and foundation to WHO Rehabilitation Programme’s strategic approach) for integrating rehabilitation into PHC, taking account of a country’s income status and major features of the health system?</li>
-    </ol>
-
-<p></p>
-
-<br>
-<br>
 
 {% endblock %}
