--- a/content/templates/help.html
+++ b/content/templates/help.html
@@ -1,60 +1,57 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h1>Biblioteca de temas relacionados às dúvidas</h1>
-<p></p>
+<div class="container">
 
-<h2>Material genérico sobre Django</h2>
-
-<a href="https://www.notion.so/Aulas-Django-cdcdbe396e3a481eb123022f9d70a586#7869bc023dab4c59944530364f4b577a" target="_blank">link para a página de resumo das aulas.</a>
-<p></p>
-
-<a href="https://www.djangoproject.com/" target="_blank">Django</a>
-<p></p>
-
-<a href="https://material.io/design" target="_blank">Material design</a>
-<p></p>
-
-<h2>Tutoriais do YouTube sobre Django</h2>
-
-<a href="https://www.youtube.com/watch?v=biuNVj1PuGs&list=PLnDvRpP8BnewqnMzRnBT5LeTpld5bMvsj&index=7" target="_blank">Curso de Django 2</a> - Matheus Battisti - Hora de Codar
-<p></p>
-
-<a href="https://www.youtube.com/watch?v=eK2sfDWQUXc" target="_blank">Construindo um Blog</a>
-<p></p>
-
-<a href="https://www.youtube.com/watch?v=4RWFvXDUmjo" target="_blank">To Do App | Django 3.0</a>
-<p></p>
-
-
-
-
-<h2>Dúvidas gerais em Sphinx e edição de livros usando Python</h2>
-
-<a href="https://www.sphinx-doc.org/en/master/index.html" target="_blank">Sphinx</a>
-<p></p>
-
-<a href="https://sphinx-themes.org/" target="_blank">Sphinx Themes Gallery</a>
-<p></p>
-
-<a href="https://executablebooks.org/en/latest/#" target="_blank">The Executable Book Project</a>
-<p></p>
-
-<a href="https://digitalsuperpowers.com/blog/2019-02-16-publishing-ebook.html" target="_blank">Self-publishing a book with reStructuredText, Sphinx, Calibre, and vim</a>
-<p></p>
-
-<a href="https://friendsofepub.github.io/eBookTricks/#typography" target="_blank">Friends of epub</a> - A collection of CSS snippets to do progressive enhancement and achieve better typography, layout and UX in eBooks.
-<p></p>
-
-<a href="https://www.youtube.com/watch?v=tXWscUSYdBs" target="_blank">Melissa Weber: Sphinx for Python Documentation</a>
-<p></p>
-
-<a href="https://www.youtube.com/watch?v=v4eoYpCON_c" target="_blank">Mariatta Wijaya - Introduction to Sphinx Docs and reStructuredText - Pyninsula #28</a>
-
-
-
-
-
-
-
+    <h1>Biblioteca de temas relacionados às dúvidas</h1>
+    <p></p>
+    
+    <h2>Material genérico sobre Django</h2>
+    
+    <a href="https://www.notion.so/Aulas-Django-cdcdbe396e3a481eb123022f9d70a586#7869bc023dab4c59944530364f4b577a" target="_blank">link para a página de resumo das aulas.</a>
+    <p></p>
+    
+    <a href="https://www.djangoproject.com/" target="_blank">Django</a>
+    <p></p>
+    
+    <a href="https://material.io/design" target="_blank">Material design</a>
+    <p></p>
+    
+    <h2>Tutoriais do YouTube sobre Django</h2>
+    
+    <a href="https://www.youtube.com/watch?v=biuNVj1PuGs&list=PLnDvRpP8BnewqnMzRnBT5LeTpld5bMvsj&index=7" target="_blank">Curso de Django 2</a> - Matheus Battisti - Hora de Codar
+    <p></p>
+    
+    <a href="https://www.youtube.com/watch?v=eK2sfDWQUXc" target="_blank">Construindo um Blog</a>
+    <p></p>
+    
+    <a href="https://www.youtube.com/watch?v=4RWFvXDUmjo" target="_blank">To Do App | Django 3.0</a>
+    <p></p>
+    
+    
+    
+    
+    <h2>Dúvidas gerais em Sphinx e edição de livros usando Python</h2>
+    
+    <a href="https://www.sphinx-doc.org/en/master/index.html" target="_blank">Sphinx</a>
+    <p></p>
+    
+    <a href="https://sphinx-themes.org/" target="_blank">Sphinx Themes Gallery</a>
+    <p></p>
+    
+    <a href="https://executablebooks.org/en/latest/#" target="_blank">The Executable Book Project</a>
+    <p></p>
+    
+    <a href="https://digitalsuperpowers.com/blog/2019-02-16-publishing-ebook.html" target="_blank">Self-publishing a book with reStructuredText, Sphinx, Calibre, and vim</a>
+    <p></p>
+    
+    <a href="https://friendsofepub.github.io/eBookTricks/#typography" target="_blank">Friends of epub</a> - A collection of CSS snippets to do progressive enhancement and achieve better typography, layout and UX in eBooks.
+    <p></p>
+    
+    <a href="https://www.youtube.com/watch?v=tXWscUSYdBs" target="_blank">Melissa Weber: Sphinx for Python Documentation</a>
+    <p></p>
+    
+    <a href="https://www.youtube.com/watch?v=v4eoYpCON_c" target="_blank">Mariatta Wijaya - Introduction to Sphinx Docs and reStructuredText - Pyninsula #28</a>
+        
+</div>
 {% endblock %}
