--- a/content/templates/indicadores_fgv.html
+++ b/content/templates/indicadores_fgv.html
@@ -3,17 +3,19 @@
 {% load static %}
 
 
-<p></p>
+<div class="container">
 
-<h2>Nossos indicadores para o FGV Municípios</h2>
+    <p></p>
+    
+    <h2>Nossos indicadores para o FGV Municípios</h2>
+    
+    <a href="https://www.who.int/publications/i/item/9789240017832" target="_blank"> Operational Framework for Primary Health Care</a>
+    <p></p>
+    <br>
+    <br>
+    <br>
 
-<a href="https://www.who.int/publications/i/item/9789240017832" target="_blank"> Operational Framework for Primary Health Care</a>
-<p></p>
-<br>
-<br>
-<br>
+    
+</div>    
 
 {% endblock %}
-
-
-
