--- a/content/templates/rehab.html
+++ b/content/templates/rehab.html
@@ -3,42 +3,45 @@
 {% load static %}
 
 
+<div class="container">
+    <p></p>
+    
+    <h2>Materiais para a revisão</h2>
+    
+    <br>
+    <br>
+    <br>
+    
+    
+    
+    Rehabilitation in health systems
+    <a href="https://www.ncbi.nlm.nih.gov/books/NBK552492/pdf/Bookshelf_NBK552492.pdf" target="_blank"> Rehabilitation in health systems. Geneva: World Health Organization; 2017. Licence: CC BY-NC-SA 3.0 IGO</a>
+    <p></p>
+    
+    WHO handbook for guideline development, 2nd ed
+    <a href="https://apps.who.int/iris/handle/10665/145714" target="_blank"> World Health Organization. (‎2014)‎. WHO handbook for guideline development, 2nd ed. World Health Organization</a>
+    <p></p>
+    
+    
+    
+    <a href="http://dcp-3.org/" target="_blank"> DCP-3</a> Disease Control Priorities provides a periodic review of the most up-to-date evidence on cost-effective interventions to address the burden of disease in low-resource settings.
+    <p></p>
+    
+    
+    COVIDENCE Platform for Systematic Reviews 
+    <a href="https://app.covidence.org/sign_in" target="_blank"> COVIDENCE</a>
+    <p></p>
+    
+    Unravelling 'low-resource settings': a systematic scoping review with qualitative content analysis
+    <a href="https://pubmed.ncbi.nlm.nih.gov/34083239/" target="_blank"> BMJ Glob Health. 2021 Jun;6(6):e005190. doi: 10.1136/bmjgh-2021-005190.</a>
+    <p></p>
+    
+    <br>
+    <br>
+    <br>
 
-<p></p>
+</div>
 
-<h2>Materiais para a revisão</h2>
-
-<br>
-<br>
-<br>
-
-
-
-Rehabilitation in health systems
-<a href="https://www.ncbi.nlm.nih.gov/books/NBK552492/pdf/Bookshelf_NBK552492.pdf" target="_blank"> Rehabilitation in health systems. Geneva: World Health Organization; 2017. Licence: CC BY-NC-SA 3.0 IGO</a>
-<p></p>
-
-WHO handbook for guideline development, 2nd ed
-<a href="https://apps.who.int/iris/handle/10665/145714" target="_blank"> World Health Organization. (‎2014)‎. WHO handbook for guideline development, 2nd ed. World Health Organization</a>
-<p></p>
-
-
-
-<a href="http://dcp-3.org/" target="_blank"> DCP-3</a> Disease Control Priorities provides a periodic review of the most up-to-date evidence on cost-effective interventions to address the burden of disease in low-resource settings.
-<p></p>
-
-
-COVIDENCE Platform for Systematic Reviews 
-<a href="https://app.covidence.org/sign_in" target="_blank"> COVIDENCE</a>
-<p></p>
-
-Unravelling 'low-resource settings': a systematic scoping review with qualitative content analysis
-<a href="https://pubmed.ncbi.nlm.nih.gov/34083239/" target="_blank"> BMJ Glob Health. 2021 Jun;6(6):e005190. doi: 10.1136/bmjgh-2021-005190.</a>
-<p></p>
-
-<br>
-<br>
-<br>
 
 
 {% endblock %}
