--- a/content/templates/tools_implementation.html
+++ b/content/templates/tools_implementation.html
@@ -4,142 +4,146 @@
 
 
 
+<div class="container">
+    <h2>Tools for Implementation Research</h2>
+    <p></p>
+    <br>
+    
+    
+    
+    Amostragem: Teoria e Prática usando o R
+    <a href="https://amostragemcomr.github.io/livro/index.html" target="_blank"> 
+        Pedro Luis do Nascimento Silva & Antonio José Ribeiro Dias</a>
+    <p></p>
+    
+    
+    <h3>Comitês de Ética em Pesquisa</h3>
+    <p></p>
+    <br>
+    
+    
+    <a href="https://conselho.saude.gov.br/images/comissoes/conep/documentos/PB/MANUAL_PESQUISADOR.pdf" target="_blank"> CONEP - Manual do Pesquisador</a>
+    <p></p>
+    
+    <a href="https://www.hospitaloswaldocruz.org.br/inovacaopesquisaeeducacao/comite-de-etica-em-pesquisa/" target="_blank"> Hospital Alemão Osvaldo Cruz</a>
+    <p></p>
+    
+    LISTA DE COMITÉS DE ÉTICA DE INVESTIGACION EN SERES HUMANOS APROBADOS – VIGENTES
+    <a href="https://www.salud.gob.ec/wp-content/uploads/2021/06/1.-Lista-CEISH-Comites-Etica-de-Investigacion-en-Seres-Humanos-aprobacion-vigente.pdf" target="_blank"> 
+        Ecuador</a>
+    <p></p>
+    
+    Comité de Ética de la Investigación en Seres Humanos<a href="https://puceapex.puce.edu.ec/web/ceish/" target="_blank"> PUCE</a>
+    <p></p>
+    
+    <a href="https://puceapex.puce.edu.ec/web/ceish/wp-content/uploads/sites/19/2020/12/0-Lista-de-requisitos-para-presentacion-de-proyectos-converted.pdf" target="_blank"> LISTA DE REQUISITOS PARA LA PRESENTACIÓN DE PROYECTOS DE INVESTIGACIÓN - PUCE</a>
+    <p></p>
+    
+    Banco Interamericano de Desenvolvimento<a href="https://www.saludmesoamerica.org/es" target="_blank"> BID</a>
+    <p></p>
+    
+    
+    
+    
+    
+    
+    <h3>Websites</h3>
+    <p></p>
+    <br>
+    
+    
+    Standards for Reporting Implementation Studies (StaRI) Statement
+    <a href="https://www.equator-network.org/reporting-guidelines/stari-statement/" target="_blank"> StaRI</a>, or their article at the BMJ
+    <a href="https://www.bmj.com/content/356/bmj.i6795.full" target="_blank"> BMJ 2017; 356 doi: https://doi.org/10.1136/bmj.i6795 (Published 06 March 2017)</a>
+    <p></p>
+    
+    <a href="https://www.re-aim.org/" target="_blank"> RE-AIM</a> is an acronym that consists of five elements, or dimensions, that relate to health behavior interventions: 
+    <a href="https://www.re-aim.org/about/frequently-asked-questions/" target="_blank"> Reach, Effectiveness, Adoption, Implementation and Maintenance</a>
+    <p></p>
+    
+    Consolidated Framework for Implementation Research
+    <a href="https://cfirguide.org/" target="_blank"> CFIR</a>
+    <p></p>
+    
+    Institute for Healthcare Improvement
+    <a href="http://www.ihi.org/" target="_blank"> IHI</a>
+    <p></p>
+    
+    National Academies of Sciences, Engineering, and Medicine; Health and Medicine Division; Board on Health Care Services; Committee on Implementing High-Quality Primary Care; Linda McCauley, Robert L. Phillips, Jr., Marc Meisnere, and Sarah K. Robinson, Editors
+    <a href="https://www.nap.edu/catalog/25983/implementing-high-quality-primary-care-rebuilding-the-foundation-of-health" target="_blank"> Implementing High-Quality Primary Care - Rebuilding the Foundation of Health Care (2021)</a>
+    <p></p>
+    
+    
+    <h3>Artigos</h3>
+    <p></p>
+    <br>
+    
+    Better reporting of interventions: template for intervention description and replication (TIDieR) checklist and guide
+    <a href="https://www.bmj.com/content/348/bmj.g1687?ijkey=3c0ec65d486a6c7b731507286ca5a2c7f085dcd7&keytype2=tf_ipsecsha" target="_blank"> BMJ 2014; 348 doi: https://doi.org/10.1136/bmj.g1687 (Published 07 March 2014) Cite this as: BMJ 2014;348:g1687</a>
+    
+    Task shifting of antiretroviral treatment from doctors to primary-care nurses in South Africa (STRETCH): a pragmatic, parallel, cluster-randomised trial
+    <a href="https://www.thelancet.com/journals/lancet/article/PIIS0140-6736(12)60730-2/fulltext#secd23712031e1238" target="_blank"> Lancet 2012; 380: 889–98. http://dx.doi.org/10.1016/S0140-6736(12)60730-2</a>
+    for smartphones, here is the <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3442223/" target="_blank"> Epub version</a>
+    <p></p>
+    
+    Uma introdução aos métodos mistos
+    <a href="https://www.scielo.br/j/soc/a/WtDMmCV3jQB8mT6tmpnzkKc/?format=pdf&lang=pt" target="_blank"> Sociologias, Porto Alegre, ano 18, no 42, mai/ago 2016, p. 384-411</a>
+    <p></p>
+    
+    Defining Research to Improve Health Systems
+    <a href="https://journals.plos.org/plosmedicine/article?id=10.1371/journal.pmed.1001000" target="_blank"> Chambers, D.A., Glasgow, R.E. & Stange, K.C. Implementation Sci 8, 117 (2013). https://doi.org/10.1371/journal.pmed.1001000</a>
+    <p></p>
+    
+    The dynamic sustainability framework: addressing the paradox of sustainment amid ongoing change
+    <a href="https://implementationscience.biomedcentral.com/articles/10.1186/1748-5908-8-117#" target="_blank"> Remme JHF, Adam T, Becerra-Posada F, D'Arcangues C, Devlin M, Gardner C, et al. (2010). PLoS Med 7(11): e1001000. https://doi.org/10.1371/journal.pmed.1001000</a>
+    <p></p>
+    
+    Estimating the Costs of Primary Care Transformation: A Practical Guide and Synthesis Report
+    <a href="https://www.ahrq.gov/sites/default/files/wysiwyg/professionals/systems/primary-care/tpc/estimating-costs-primary-care-transformation.pdf" target="_blank"> Agency for Healthcare Research and Quality</a>
+    <p></p>
+    
+    Patient safety after implementation of a coproduced family centered communication programme: multicenter before and after intervention study. BMJ. 2018; 363: k4764. Published online 2018 Dec 5.
+    <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6278585/?report=reader" target="_blank"> doi: 10.1136/bmj.k4764</a>
+    <p></p>
+    
+    Subsidizing Access to Prescription Drugs and Health Outcomes: The Case of Diabetes. Pedro Américo e Rudi Rocha. Journal of Health Economics; Volume 72, July 2020, 102347
+    <a href="https://ieps.org.br/pesquisas/subsidizing-access-to-prescription-drugs-and-health-outcomes-the-case-of-diabetes/" target="_blank"> https://doi.org/10.1016/j.jhealeco.2020.102347</a>
+    <p></p>
+    <br>
+    <br>
+    
+    <h3>Livros</h3>
+    <p></p>
+    <br>
+    
+    Crossing the Quality Chasm. A New Health System for the 21st Century. 
+    <a href="https://www.ncbi.nlm.nih.gov/books/NBK222274/" target="_blank"> Institute of Medicine (US) Committee on Quality of Health Care in America.</a> Livro fundador da temática do Quality Improvement.
+    <p></p>
+    <br>
+    <br>
+    
+    <h3>Cursos</h3>
+    <p></p>
+    <br>
+    
+    <a href="https://www.iats.com.br/introducao-a-value-based-health-care/" target="_blank"> INTRODUÇÃO À VALUE-BASED HEALTH CARE: TEORIA E APLICAÇÕES PRÁTICAS</a><br>
+    Carga horária: 15 horas<br>
+    Data: 2 a 6 de agosto de 2021<br>
+    com sessões síncronas das 18h30min às 21h.<br>
+    <p></p>
+    
+    
+    What Does the Word "Value" Mean? 
+    <a href="https://www.coursera.org/lecture/value-based-care-introduction/what-does-the-word-value-mean-Le4vA" target="_blank"> Coursera</a>
+    <p></p>
+    
+    
+    
+    <br>
+    <br>
+    <br>
 
-<h2>Tools for Implementation Research</h2>
-<p></p>
-<br>
+</div>
 
 
-
-Amostragem: Teoria e Prática usando o R
-<a href="https://amostragemcomr.github.io/livro/index.html" target="_blank"> 
-    Pedro Luis do Nascimento Silva & Antonio José Ribeiro Dias</a>
-<p></p>
-
-
-<h3>Comitês de Ética em Pesquisa</h3>
-<p></p>
-<br>
-
-
-<a href="https://conselho.saude.gov.br/images/comissoes/conep/documentos/PB/MANUAL_PESQUISADOR.pdf" target="_blank"> CONEP - Manual do Pesquisador</a>
-<p></p>
-
-<a href="https://www.hospitaloswaldocruz.org.br/inovacaopesquisaeeducacao/comite-de-etica-em-pesquisa/" target="_blank"> Hospital Alemão Osvaldo Cruz</a>
-<p></p>
-
-LISTA DE COMITÉS DE ÉTICA DE INVESTIGACION EN SERES HUMANOS APROBADOS – VIGENTES
-<a href="https://www.salud.gob.ec/wp-content/uploads/2021/06/1.-Lista-CEISH-Comites-Etica-de-Investigacion-en-Seres-Humanos-aprobacion-vigente.pdf" target="_blank"> 
-    Ecuador</a>
-<p></p>
-
-Comité de Ética de la Investigación en Seres Humanos<a href="https://puceapex.puce.edu.ec/web/ceish/" target="_blank"> PUCE</a>
-<p></p>
-
-<a href="https://puceapex.puce.edu.ec/web/ceish/wp-content/uploads/sites/19/2020/12/0-Lista-de-requisitos-para-presentacion-de-proyectos-converted.pdf" target="_blank"> LISTA DE REQUISITOS PARA LA PRESENTACIÓN DE PROYECTOS DE INVESTIGACIÓN - PUCE</a>
-<p></p>
-
-Banco Interamericano de Desenvolvimento<a href="https://www.saludmesoamerica.org/es" target="_blank"> BID</a>
-<p></p>
-
-
-
-
-
-
-<h3>Websites</h3>
-<p></p>
-<br>
-
-
-Standards for Reporting Implementation Studies (StaRI) Statement
-<a href="https://www.equator-network.org/reporting-guidelines/stari-statement/" target="_blank"> StaRI</a>, or their article at the BMJ
-<a href="https://www.bmj.com/content/356/bmj.i6795.full" target="_blank"> BMJ 2017; 356 doi: https://doi.org/10.1136/bmj.i6795 (Published 06 March 2017)</a>
-<p></p>
-
-<a href="https://www.re-aim.org/" target="_blank"> RE-AIM</a> is an acronym that consists of five elements, or dimensions, that relate to health behavior interventions: 
-<a href="https://www.re-aim.org/about/frequently-asked-questions/" target="_blank"> Reach, Effectiveness, Adoption, Implementation and Maintenance</a>
-<p></p>
-
-Consolidated Framework for Implementation Research
-<a href="https://cfirguide.org/" target="_blank"> CFIR</a>
-<p></p>
-
-Institute for Healthcare Improvement
-<a href="http://www.ihi.org/" target="_blank"> IHI</a>
-<p></p>
-
-National Academies of Sciences, Engineering, and Medicine; Health and Medicine Division; Board on Health Care Services; Committee on Implementing High-Quality Primary Care; Linda McCauley, Robert L. Phillips, Jr., Marc Meisnere, and Sarah K. Robinson, Editors
-<a href="https://www.nap.edu/catalog/25983/implementing-high-quality-primary-care-rebuilding-the-foundation-of-health" target="_blank"> Implementing High-Quality Primary Care - Rebuilding the Foundation of Health Care (2021)</a>
-<p></p>
-
-
-<h3>Artigos</h3>
-<p></p>
-<br>
-
-Better reporting of interventions: template for intervention description and replication (TIDieR) checklist and guide
-<a href="https://www.bmj.com/content/348/bmj.g1687?ijkey=3c0ec65d486a6c7b731507286ca5a2c7f085dcd7&keytype2=tf_ipsecsha" target="_blank"> BMJ 2014; 348 doi: https://doi.org/10.1136/bmj.g1687 (Published 07 March 2014) Cite this as: BMJ 2014;348:g1687</a>
-
-Task shifting of antiretroviral treatment from doctors to primary-care nurses in South Africa (STRETCH): a pragmatic, parallel, cluster-randomised trial
-<a href="https://www.thelancet.com/journals/lancet/article/PIIS0140-6736(12)60730-2/fulltext#secd23712031e1238" target="_blank"> Lancet 2012; 380: 889–98. http://dx.doi.org/10.1016/S0140-6736(12)60730-2</a>
-for smartphones, here is the <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3442223/" target="_blank"> Epub version</a>
-<p></p>
-
-Uma introdução aos métodos mistos
-<a href="https://www.scielo.br/j/soc/a/WtDMmCV3jQB8mT6tmpnzkKc/?format=pdf&lang=pt" target="_blank"> Sociologias, Porto Alegre, ano 18, no 42, mai/ago 2016, p. 384-411</a>
-<p></p>
-
-Defining Research to Improve Health Systems
-<a href="https://journals.plos.org/plosmedicine/article?id=10.1371/journal.pmed.1001000" target="_blank"> Chambers, D.A., Glasgow, R.E. & Stange, K.C. Implementation Sci 8, 117 (2013). https://doi.org/10.1371/journal.pmed.1001000</a>
-<p></p>
-
-The dynamic sustainability framework: addressing the paradox of sustainment amid ongoing change
-<a href="https://implementationscience.biomedcentral.com/articles/10.1186/1748-5908-8-117#" target="_blank"> Remme JHF, Adam T, Becerra-Posada F, D'Arcangues C, Devlin M, Gardner C, et al. (2010). PLoS Med 7(11): e1001000. https://doi.org/10.1371/journal.pmed.1001000</a>
-<p></p>
-
-Estimating the Costs of Primary Care Transformation: A Practical Guide and Synthesis Report
-<a href="https://www.ahrq.gov/sites/default/files/wysiwyg/professionals/systems/primary-care/tpc/estimating-costs-primary-care-transformation.pdf" target="_blank"> Agency for Healthcare Research and Quality</a>
-<p></p>
-
-Patient safety after implementation of a coproduced family centered communication programme: multicenter before and after intervention study. BMJ. 2018; 363: k4764. Published online 2018 Dec 5.
-<a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6278585/?report=reader" target="_blank"> doi: 10.1136/bmj.k4764</a>
-<p></p>
-
-Subsidizing Access to Prescription Drugs and Health Outcomes: The Case of Diabetes. Pedro Américo e Rudi Rocha. Journal of Health Economics; Volume 72, July 2020, 102347
-<a href="https://ieps.org.br/pesquisas/subsidizing-access-to-prescription-drugs-and-health-outcomes-the-case-of-diabetes/" target="_blank"> https://doi.org/10.1016/j.jhealeco.2020.102347</a>
-<p></p>
-<br>
-<br>
-
-<h3>Livros</h3>
-<p></p>
-<br>
-
-Crossing the Quality Chasm. A New Health System for the 21st Century. 
-<a href="https://www.ncbi.nlm.nih.gov/books/NBK222274/" target="_blank"> Institute of Medicine (US) Committee on Quality of Health Care in America.</a> Livro fundador da temática do Quality Improvement.
-<p></p>
-<br>
-<br>
-
-<h3>Cursos</h3>
-<p></p>
-<br>
-
-<a href="https://www.iats.com.br/introducao-a-value-based-health-care/" target="_blank"> INTRODUÇÃO À VALUE-BASED HEALTH CARE: TEORIA E APLICAÇÕES PRÁTICAS</a><br>
-Carga horária: 15 horas<br>
-Data: 2 a 6 de agosto de 2021<br>
-com sessões síncronas das 18h30min às 21h.<br>
-<p></p>
-
-
-What Does the Word "Value" Mean? 
-<a href="https://www.coursera.org/lecture/value-based-care-introduction/what-does-the-word-value-mean-Le4vA" target="_blank"> Coursera</a>
-<p></p>
-
-
-
-<br>
-<br>
-<br>
 {% endblock %}
