--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -4,21 +4,25 @@
 
 
 
+<div class="container">
+    <h2>Dashboard</h2>
+    
+    <p></p>
+    <br>
+    <br>
+    <br>
+    
+    <img src={% static "dashboard.png" %}>
+    <br>
+    <br>
+    
+    
+    <a href="https://www.hopkinsmedicine.org/som/offices/pda/training-resources/core-competencies.html" target="_blank"> Core competencies</a> all researchers should have.
+    <p></p>
 
-<h2>Dashboard</h2>
-
-<p></p>
-<br>
-<br>
-<br>
-
-<img src={% static "dashboard.png" %}>
-<br>
-<br>
+</div>
 
 
-<a href="https://www.hopkinsmedicine.org/som/offices/pda/training-resources/core-competencies.html" target="_blank"> Core competencies</a> all researchers should have.
-<p></p>
 
 
 {% endblock %}
