--- a/content/templates/community_dwelling.html
+++ b/content/templates/community_dwelling.html
@@ -2,26 +2,29 @@
 {% block content %}
 {% load static %}
 
-<p></p>
-
-<h2>Community Dwelling and Homecare</h2>
-<br>
-<br>
-<br>
-
-
-<p></p>
-Efficacy of progressive resistance training interventions in older adults in nursing homes: a systematic review
-<a href="https://sci-hub.se/10.1016/j.jamda.2011.11.001" target="_blank"> DOI:10.1016/j.jamda.2011.11.001</a>
-<p></p>
-
-
-Systematic Review and Meta-Analysis of Home-Based Rehabilitation on Improving Physical Function Among Home-Dwelling Patients With a Stroke
-<a href="https://sci-hub.se/10.1016/j.apmr.2019.10.181" target="_blank"> DOI:10.1016/j.apmr.2019.10.181</a>
-<p></p>
-<br>
-<br>
-<br>
-
+<div class="container">
+    <p></p>
+    
+    <h2>Community Dwelling and Homecare</h2>
+    <br>
+    <br>
+    <br>
+    
+    
+    <p></p>
+    Efficacy of progressive resistance training interventions in older adults in nursing homes: a systematic review
+    <a href="https://sci-hub.se/10.1016/j.jamda.2011.11.001" target="_blank"> DOI:10.1016/j.jamda.2011.11.001</a>
+    <p></p>
+    
+    
+    Systematic Review and Meta-Analysis of Home-Based Rehabilitation on Improving Physical Function Among Home-Dwelling Patients With a Stroke
+    <a href="https://sci-hub.se/10.1016/j.apmr.2019.10.181" target="_blank"> DOI:10.1016/j.apmr.2019.10.181</a>
+    <p></p>
+    <br>
+    <br>
+    <br>
+    
+    
+</div>
 
 {% endblock %}
