--- a/content/templates/unasus.html
+++ b/content/templates/unasus.html
@@ -2,18 +2,21 @@
 {% block content %}
 {% load static %}
 
-<h1>Página principal</h1>
+<div class="container">
+    <h1>Página principal</h1>
+    
+    <p></p>
+    
+    <h2>Quem gosta do Chaves não deve explicação para ninguém!</h2>
+    
+    <p></p>
+    
+    <img src={% static "chaves.jpg" %}>
+    
+    <p></p>
+    
+    <a href="{% url 'index'%}">Index</a>
 
-<p></p>
-
-<h2>Quem gosta do Chaves não deve explicação para ninguém!</h2>
-
-<p></p>
-
-<img src={% static "chaves.jpg" %}>
-
-<p></p>
-
-<a href="{% url 'index'%}">Index</a>
+</div>
 
 {% endblock %}
