--- a/dashboard/templates/evento.html
+++ b/dashboard/templates/evento.html
@@ -8,12 +8,12 @@
   <p>
     <!-- Na sua cidade há 100 Equipes de Saúde da Família. Na opção abaixo, determine a quantidade de Médicos de Família que
     você tem disponível na sua cidade e veja as mudanças que podem ocorrer na quantidade de eventos: -->
-    Ao longo de um ano, nossa população terá 486811 consultas, nas quais 51757 exames são solicitados. 33% das consultas
-    são feitas por Médicos de Família e 66% são feitas por médicos Generalistas. Pacientes que consultam com Médicos de
-    Família têm um risco 47% menor de que um Hemograma seja solicitado na consulta.
+    Ao longo de um ano, nossa população terá <b>{{evento.oportunidades}} consultas</b>, nas quais <b>{{evento.ocorrencias}} exames de {{evento.nome}}</b> 
+    são solicitados. 66% são feitas por médicos Generalistas e 33% das consultas da nossa população foram feitas por Médicos de Família. 
+    <b>Pacientes que consultam com Médicos de Família têm um risco {{evento.menos_ponto}}% menor de que um {{evento.nome}} seja solicitado na consulta</b>.
     <br>
     Use a barra para mudar a proporção de consultas feitas por Médicos de Família e Generalistas e veja o que acontecerá
-    com os pedidos de hemograma.
+    com os pedidos de <b>{{evento.nome}}</b>.
   </p>
 
   <p> <span class="bold">Nome:</span> {{evento.nome}} </p>
@@ -30,9 +30,9 @@
     <p class="family_doctor">Médicos de família</p>
   </div>
   <div class="range-box">
-    <p><span id="generalistas">50</span>% </p>
-    <input type="range" id="alcance" min="0" max="100" />
-    <p class="family_doctor"><span id="medicosDeFamilia"> 50</span>%  </p>
+    <p><span id="generalistas">67</span>% </p>
+    <input type="range" id="alcance" min="0" max="100" value="33"/>
+    <p class="family_doctor"><span id="medicosDeFamilia"> 33</span>%  </p>
   </div>
   
   </p>
@@ -95,8 +95,15 @@
 
 
     const texto = document.getElementById('texto-resultado')
-    texto.innerText = `Ao longo de um ano, caso ${alcance.value}% dos médicos aqui sejam Médicos de Família,  haverá uma redução de ${diferenca}% no número total de exames solicitados. 
-    Dos ${ocorrencias} exames solicitados inicialmente, ${(diferenca*ocorrencias/100).toFixed(0)} deixarão de ser solicitados, com um intervalo de confiança entre ${intervaloLower} e ${intervaloUpper} exames.`
+
+    if (diferenca > 0) {
+      texto.innerHTML = `Ao longo de um ano, caso <b>${alcance.value}%</b> dos médicos aqui sejam Médicos de Família, haverá uma redução de <b>${diferenca}%</b> no número total de exames solicitados. 
+    Dos <b>${ocorrencias}</b> exames solicitados inicialmente, <b>${(diferenca*ocorrencias/100).toFixed(0)}</b> exames deixarão de ser solicitados, com um intervalo de confiança entre <b>${intervaloUpper}</b> e <b>${intervaloLower}</b> exames.`
+    }
+    else {
+      texto.innerHTML = `Ao longo de um ano, caso <b>${alcance.value}%</b> dos médicos aqui sejam Médicos de Família, haverá um aumento de <b>${Math.abs(diferenca)}%</b> no número total de exames solicitados. 
+    Dos <b>${ocorrencias}</b> exames solicitados inicialmente, <b>${(Math.abs(diferenca*ocorrencias/100).toFixed(0))}</b> novos exames passarão a ser solicitados, com um intervalo de confiança entre <b>${Math.abs(intervaloUpper)}</b> e <b>${Math.abs(intervaloLower)}</b> exames.`
+    }
 
 
   })
